--- a/css/boardlist.css
+++ b/css/boardlist.css
@@ -10,9 +10,52 @@ width:800px;
 	
 }
 
+p{
+	font-weight: normal;
+	
+}
+
 .writing{
 	margin:0 ;
 }
+.indicator{
+	display: block;
+	font-weight: normal;
+	font-size: 16px;
+	width: 50px;
+	height: inherit;
+	
+	text-align: center;
+	cursor: pointer;
+	 
+}
+
+.indicator:hover{
+	color: rgb(32, 51, 224);
+	text-decoration: underline;
+}
+.writing_button{
+	display: block;
+	text-align: right;
+
+}
+
+.indi_wrap {
+	display: flex;
+	justify-content: center;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    width: 300px;
+    text-align: center;
+  
+
+  
+}
+
+
 
 tbody{
 }
